<resources>
    <string name="app_name">"TourWizArt TESTVERSION"</string>
    <string name="default_language_code">"en"</string>
    <string name="default_gender">"n"</string>
    <string name="default_age">"-"</string>
    <string name="title_home">"Home"</string>
    <string name="title_dashboard">"Dashboard"</string>
    <string name="title_notifications">"Notifications"</string>
    <string name="browse_tours">"Browse tours"</string>
    <string name="tour_title">"Title"</string>
    <string name="cancel">"Cancel"</string>
    <string name="start_tour_now">"Start now"</string>
    <string name="add_to_favorites">"Add to favorites"</string>
    <string name="delete_tour">"Delete tour"</string>
    <string name="confirm_delete_tour">"Do you really want to delete this tour?"</string>
    <string name="tour_deleted">"Tour deleted"</string>
    <string name="tour_description">"Description"</string>
    <string name="customize_tour">"Customize"</string>
    <string name="filter_tours">"Filter"</string>
    <string name="filter_datasetobject">"Filter"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="menu_bloomberg_philantropies">"Bloomberg Philanthropies"</string>
    <string name="menu_icons8">"Icons8.de"</string>
    <string name="menu_data_privacy">"Data Privacy"</string>
    <string name="menu_impressum">"Impressum"</string>
    <string name="menu_about">"About"</string>
    <string name="menu_statistics">"Statistics"</string>
    <string name="pref_language">"Language"</string>
    <string name="pref_gender">"Gender"</string>
    <string name="pref_age">"Age"</string>
    <string name="pref_show_only_staedel">"Show only Städel"</string>
    <string name="pref_filter_tour_title">"Title"</string>
    <string name="pref_filter_tour_access_level">"Access Level"</string>
    <string name="pref_filter_datasetobject_title">"Title"</string>
    <string name="pref_filter_datasetobject_status">"Status"</string>
    <string name="enter_tour_title">"Please enter a title for the tour"</string>
    <string name="enter_tour_description">"Please enter a description for the tour"</string>
    <string name="enter_tour_objects">"Please add items to the tour"</string>
    <string name="internal_error">"Sorry, an internal error occured"</string>
    <string name="title_browse_datasets">"Datasets"</string>
    <string name="dash_my_tours">"My Tours"</string>
    <string name="tour_default_title">"My Tour"</string>
    <string name="nav_browse_tours">Browse"</string>
    <string name="nav_save_as_draft">"Home"</string>
    <string name="nav_create_tour">"Create tour"</string>
    <string name="nav_delete_tour">"Delete"</string>
    <string name="nav_publish_tour">"Publish"</string>
    <string name="nav_tour_route">"Route"</string>
    <string name="nav_apply">"Apply"</string>
    <string name="nav_add_more">"Add more"</string>
    <string name="nav_add_to_favorites">"Favorites"</string>
    <string name="nav_start_tour_now">"Start"</string>
    <string name="nav_customize_tour">"Customize"</string>
    <string name="nav_edit_tour">"Edit"</string>
    <string name="nav_test_tour">"Test tour"</string>
    <string name="nav_my_tours">"My tours"</string>
    <string name="nav_dashboard">"Dashboard"</string>
    <string name="map_front_view">"Front view"</string>
    <string name="map_top_view">"Top view"</string>
    <string name="header_dashboard">"Dashboard"</string>
    <string name="header_my_tours">"My Tours"</string>
    <string name="header_select_data_set">"Select data set"</string>
    <string name="header_select_tour">"Select tour"</string>
    <string name="header_tour_details">"Tour details"</string>
    <string name="header_create_select_objects">"Select objects"</string>
    <string name="header_create_tour_objects">"Tour objects"</string>
    <string name="header_tour_details_preview">"Preview tour"</string>
    <string name="header_create_test_tour">"Test tour"</string>
    <string name="nav_audio_record">"Record"</string>
    <string name="nav_audio_play">"Play"</string>
    <string name="nav_audio_stop">"Stop"</string>
    <string name="select_object">"Please select object"</string>
    <string name="ready_to_record_audio">"Permission granted. Please click the record button again for recording."</string>
    <string name="about_text">"This app is a DEMO/TEST version for the Culture-Hackathon 'Coding da Vinci Rhein-Main 2018'!"</string>
    <string name="title_activity_stolpersteine_map">Map</string>
</resources>
